Styled the navbar

--- a/index.html
+++ b/index.html
@@ -6,17 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/bootstrap.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="assets/css/styles.css">
     <title>ShopItAll</title>
 </head>
 <body>
     <!--Nav Start-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top py-3">
         <div class="container-fluid">
             <a href="#" class="navbar-brand">ShopItAll</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse">
                 <span class="navbar-toggle-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <div class="collapse navbar-collapse nav-buttons" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
                         <a href="#" class="nav-link">Home</a>
@@ -32,9 +33,10 @@
                     </li>
                     <li class="nav-item">
                         <i class="fas fa-shopping-cart"></i>
+                        <i class="fas fa-user"></i>
                     </li>
                     <li class="nav-item">
-                        <i class="fas fa-user"></i>
+                        
                     </li>
                 </ul>
             </div>
