Set basic Hero. No background image

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <!--Nav Start-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top py-3">
-        <div class="container-fluid">
+        <div class="container">
             <a href="#" class="navbar-brand">ShopItAll</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse">
                 <span class="navbar-toggle-icon"></span>
@@ -43,6 +43,20 @@
         </div>
     </nav>
     <!--Nav Start-->
+
+    <!--Hero start-->
+    <section id="home">
+        <div class="container">
+            <h5>NEW ARRIVALS</h5>
+            <h1>The Latest Fashion At The Best Prices</h1>
+            <p>
+                We offer high quality products at the most affordable prices
+            </p>
+            <button>Shop Now</button>
+        </div>
+    </section>
+    <!--Hero end-->
+
     
     <script src="assets/js/bootstrap.js"></script>
 </body>
