finished the featured section skeleton

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top py-3">
         <div class="container">
             <a href="#" class="navbar-brand">ShopItAll</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse">
-                <span class="navbar-toggle-icon"></span>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarMain">
+                <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse nav-buttons" id="navbarSupportedContent">
+            <div class="collapse navbar-collapse nav-buttons" id="navbarMain">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
                         <a href="#" class="nav-link">Home</a>
@@ -107,6 +107,82 @@
         </div>
     </section>
     <!--New end-->
-    <script src="assets/js/bootstrap.min.js"></script>
+
+    <!--Featured Sart-->
+    <section id="featured" class="my-5 pb-5">
+        <div class="container text-center mt-5 py-5">
+            <h3>
+                Featured Items
+            </h3>
+            <hr class="mx-auto">
+            <p>
+                Check out our featured products
+            </p>
+        </div>
+        <div class="row mx-auto container-fluid">
+            <div class="product text-center col-lg-3 col-md-4 col-sm-12">
+                <img src="assets/images/Lace-up-Sneakers-NAVY-505479330.jpg" class="img-fluid mb-3" alt="">
+                <div class="star">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <h5 class="p-name">
+                    Navy Sneakers
+                </h5>
+                <h4 class="p-price">R600</h4>
+                <button class="buy-btn">Buy Now</button>
+            </div>
+            <div class="product text-center col-lg-3 col-md-4 col-sm-12">
+                <img src="assets/images/Lace-up-Sneakers-BLACK-505479330.jpg" class="img-fluid mb-3" alt="">
+                <div class="star">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <h5 class="p-name">
+                    Black Sneakers
+                </h5>
+                <h4 class="p-price">R600</h4>
+                <button class="buy-btn">Buy Now</button>
+            </div>
+            <div class="product text-center col-lg-3 col-md-4 col-sm-12">
+                <img src="assets/images/Lace-up-Sneakers-WHITE-505479330.jpg" class="img-fluid mb-3" alt="">
+                <div class="star">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <h5 class="p-name">
+                    White Sneakers
+                </h5>
+                <h4 class="p-price">R600</h4>
+                <button class="buy-btn">Buy Now</button>
+            </div>
+            <div class="product text-center col-lg-3 col-md-4 col-sm-12">
+                <img src="assets/images/Lace-up-Sneakers-GREY-505479330-side.jpg" class="img-fluid mb-3" alt="">
+                <div class="star">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <h5 class="p-name">
+                    Grey Sneakers
+                </h5>
+                <h4 class="p-price">R600</h4>
+                <button class="buy-btn">Buy Now</button>
+            </div>
+        </div>
+    </section>
+    <!--Featured End-->
+    <script src="assets/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
