Mid banner skeleton

--- a/index.html
+++ b/index.html
@@ -183,6 +183,16 @@
         </div>
     </section>
     <!--Featured End-->
+
+    <!--Banner start-->
+    <section id="banner" class="my-5 py-5">
+        <div class="container">
+            <h4>END OF YEAR SALE</h4>
+            <h1>Christmas Collection <br> Up to 50% off</h1>
+            <button class="text-uppercase">Shop Now</button>
+        </div>
+    </section>
+    <!--Banner end-->
     <script src="assets/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
