added images and comleted footer

--- a/index.html
+++ b/index.html
@@ -11,13 +11,16 @@
 </head>
 <body>
     <!--Nav Start-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top py-3">
+    <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top py-3">
         <div class="container">
-            <a href="#" class="navbar-brand">ShopItAll</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarMain">
+            <div>
+                <a href="#" class="navbar-brand">ShopItAll</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarMain">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse nav-buttons" id="navbarMain">
+            </div>
+            
+            <div class="collapse navbar-collapse nav-buttons nowrap" id="navbarMain">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
                         <a href="#" class="nav-link">Home</a>
@@ -49,7 +52,7 @@
     <section id="home">
         <div class="container">
             <h5>NEW ARRIVALS</h5>
-            <h1>The Latest Fashion At The Best Prices</h1>
+            <h1>The Latest Fashion <br> At The Best Prices</h1>
             <p>
                 We offer high quality products at the most affordable prices
             </p>
@@ -136,7 +139,7 @@
                 <button class="buy-btn">Buy Now</button>
             </div>
             <div class="product text-center col-lg-3 col-md-4 col-sm-12">
-                <img src="assets/images/Lace-up-Sneakers-BLACK-505479330.jpg" class="img-fluid mb-3" alt="">
+                <img src="assets/images/Adventure-Outdoor-Sandals-BROWN-505479460-side.jpg" class="img-fluid mb-3" alt="">
                 <div class="star">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -145,13 +148,13 @@
                     <i class="fas fa-star"></i>
                 </div>
                 <h5 class="p-name">
-                    Black Sneakers
+                    Brown Sandals
                 </h5>
-                <h4 class="p-price">R600</h4>
+                <h4 class="p-price">R400</h4>
                 <button class="buy-btn">Buy Now</button>
             </div>
             <div class="product text-center col-lg-3 col-md-4 col-sm-12">
-                <img src="assets/images/Lace-up-Sneakers-WHITE-505479330.jpg" class="img-fluid mb-3" alt="">
+                <img src="assets/images/Australian-Cotton-Stripe-Pique-Polo-NAVY-505691304.jpg" class="img-fluid mb-3" alt="">
                 <div class="star">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -160,13 +163,13 @@
                     <i class="fas fa-star"></i>
                 </div>
                 <h5 class="p-name">
-                    White Sneakers
+                    Polo Shirt
                 </h5>
-                <h4 class="p-price">R600</h4>
+                <h4 class="p-price">R700</h4>
                 <button class="buy-btn">Buy Now</button>
             </div>
             <div class="product text-center col-lg-3 col-md-4 col-sm-12">
-                <img src="assets/images/Lace-up-Sneakers-GREY-505479330-side.jpg" class="img-fluid mb-3" alt="">
+                <img src="assets/images/StayNew-Slim-Fit-V-neck-Cotton-T-shirt-ICE-506080516-top.jpg" class="img-fluid mb-3" alt="">
                 <div class="star">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -175,9 +178,9 @@
                     <i class="fas fa-star"></i>
                 </div>
                 <h5 class="p-name">
-                    Grey Sneakers
+                    V-Neck T-Shirt
                 </h5>
-                <h4 class="p-price">R600</h4>
+                <h4 class="p-price">R150</h4>
                 <button class="buy-btn">Buy Now</button>
             </div>
         </div>
@@ -193,6 +196,290 @@
         </div>
     </section>
     <!--Banner end-->
+
+    <!--Clothes Start-->
+    <section id="clothes" class="my-5">
+        <div class="container text-center mt-5 py-5">
+            <h3>
+                Shirts & Pants
+            </h3>
+            <hr class="mx-auto">
+            <p>
+                The best summer look in the country
+            </p>
+        </div>
+        <div class="row mx-auto container-fluid">
+            <div class="product text-center col-lg-3 col-md-4 col-sm-12">
+                <img src="assets/images/Australian-Cotton-Stripe-Pique-Polo-NAVY-505691304.jpg" class="img-fluid mb-3" alt="">
+                <div class="star">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <h5 class="p-name">
+                    Navy Sneakers
+                </h5>
+                <h4 class="p-price">R600</h4>
+                <button class="buy-btn">Buy Now</button>
+            </div>
+            <div class="product text-center col-lg-3 col-md-4 col-sm-12">
+                <img src="assets/images/Micro-Stripe-Pima-Crew-T-Shirt-MID-GREY-505636384.jpg" class="img-fluid mb-3" alt="">
+                <div class="star">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <h5 class="p-name">
+                    Black Sneakers
+                </h5>
+                <h4 class="p-price">R600</h4>
+                <button class="buy-btn">Buy Now</button>
+            </div>
+            <div class="product text-center col-lg-3 col-md-4 col-sm-12">
+                <img src="assets/images/StayNew-Slim-Fit-V-neck-Cotton-T-shirt-ICE-506080516.jpg" class="img-fluid mb-3" alt="">
+                <div class="star">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <h5 class="p-name">
+                    White Sneakers
+                </h5>
+                <h4 class="p-price">R600</h4>
+                <button class="buy-btn">Buy Now</button>
+            </div>
+            <div class="product text-center col-lg-3 col-md-4 col-sm-12">
+                <img src="assets/images/Micro-Stripe-Pima-Crew-T-Shirt-MID-GREY-505636384-styled.jpg" class="img-fluid mb-3" alt="">
+                <div class="star">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <h5 class="p-name">
+                    Grey Sneakers
+                </h5>
+                <h4 class="p-price">R600</h4>
+                <button class="buy-btn">Buy Now</button>
+            </div>
+        </div>
+    </section>
+    <!--Clothes End-->
+
+    <!--Shoes Start-->
+    <section id="shoes" class="my-5">
+        <div class="container text-center mt-5 py-5">
+            <h3>
+                Footware
+            </h3>
+            <hr class="mx-auto">
+            <p>
+                Step into summer with our amazing footware collection
+            </p>
+        </div>
+        <div class="row mx-auto container-fluid">
+            <div class="product text-center col-lg-3 col-md-4 col-sm-12">
+                <img src="assets/images/Lace-up-Sneakers-NAVY-505479330.jpg" class="img-fluid mb-3" alt="">
+                <div class="star">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <h5 class="p-name">
+                    Navy Sneakers
+                </h5>
+                <h4 class="p-price">R600</h4>
+                <button class="buy-btn">Buy Now</button>
+            </div>
+            <div class="product text-center col-lg-3 col-md-4 col-sm-12">
+                <img src="assets/images/Adventure-Outdoor-Sandals-BROWN-505479460-styled.jpg" class="img-fluid mb-3" alt="">
+                <div class="star">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <h5 class="p-name">
+                    Black Sneakers
+                </h5>
+                <h4 class="p-price">R600</h4>
+                <button class="buy-btn">Buy Now</button>
+            </div>
+            <div class="product text-center col-lg-3 col-md-4 col-sm-12">
+                <img src="assets/images/Comfort-Derby-Shoes-BLACK-506058246.jpg" class="img-fluid mb-3" alt="">
+                <div class="star">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <h5 class="p-name">
+                    White Sneakers
+                </h5>
+                <h4 class="p-price">R600</h4>
+                <button class="buy-btn">Buy Now</button>
+            </div>
+            <div class="product text-center col-lg-3 col-md-4 col-sm-12">
+                <img src="assets/images/Cursive-Logo-Flip-Flops-NAVY-506214520.jpg" class="img-fluid mb-3" alt="">
+                <div class="star">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <h5 class="p-name">
+                    Grey Sneakers
+                </h5>
+                <h4 class="p-price">R600</h4>
+                <button class="buy-btn">Buy Now</button>
+            </div>
+        </div>
+    </section>
+    <!--Shoes End-->
+
+    <!--Accessories start-->
+    <section id="accessories" class="my-5">
+        <div class="container text-center mt-5 py-5">
+            <h3>
+                Accessories
+            </h3>
+            <hr class="mx-auto">
+            <p>
+                Complete any outfit with these beautiful accessories
+            </p>
+        </div>
+        <div class="row mx-auto container-fluid">
+            <div class="product text-center col-lg-3 col-md-4 col-sm-12">
+                <img src="assets/images/Badge-Logo-Baseball-Cap-GREY-506064268-angle.jpg" class="img-fluid mb-3" alt="">
+                <div class="star">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <h5 class="p-name">
+                    Navy Sneakers
+                </h5>
+                <h4 class="p-price">R600</h4>
+                <button class="buy-btn">Buy Now</button>
+            </div>
+            <div class="product text-center col-lg-3 col-md-4 col-sm-12">
+                <img src="assets/images/Flat-Cap-X-NAVY-506085200-angle.jpg" class="img-fluid mb-3" alt="">
+                <div class="star">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <h5 class="p-name">
+                    Black Sneakers
+                </h5>
+                <h4 class="p-price">R600</h4>
+                <button class="buy-btn">Buy Now</button>
+            </div>
+            <div class="product text-center col-lg-3 col-md-4 col-sm-12">
+                <img src="assets/images/Straw-Panama-Hat-X-NATURAL-506065236-angle.jpg" class="img-fluid mb-3" alt="">
+                <div class="star">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <h5 class="p-name">
+                    White Sneakers
+                </h5>
+                <h4 class="p-price">R600</h4>
+                <button class="buy-btn">Buy Now</button>
+            </div>
+            <div class="product text-center col-lg-3 col-md-4 col-sm-12">
+                <img src="assets/images/Badge-Logo-Baseball-Cap-GREY-506064268-styled.jpg" class="img-fluid mb-3" alt="">
+                <div class="star">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <h5 class="p-name">
+                    Grey Sneakers
+                </h5>
+                <h4 class="p-price">R600</h4>
+                <button class="buy-btn">Buy Now</button>
+            </div>
+        </div>
+    </section>
+    <!--Accessories end-->
+
+    <!--Footer start-->
+    <footer class="mt-5 py-5">
+        <div class="d-flex justify-content-around container">
+            <div class="footer-one col-lg-4 col-md-6 col-sm-12 ">
+                <img src="assets/images/IMG_20211102_124420.png" alt="" class="img-fluid w-75">
+                <p class="pt-3">Trust us with your Christmas shopping</p>
+            </div>
+            <div class="col-lg-3 col-md-6 col-sm-12 footer-one">
+                <h5 class="pb-5">
+                    Featured
+                </h5>
+                <ul class="text-uppercase">
+                    <li><a href="#">Shoes</a></li>
+                    <li><a href="#">Shirts</a></li>
+                    <li><a href="#">pants</a></li>
+                    <li><a href="#">Accessories</a></li>
+                    <li><a href="#">fragrances</a></li>
+                    <li><a href="#">New Arrivals</a></li>
+                </ul>
+            </div>
+            <div class="col-lg-3 col-md-6 col-sm-12 footer-one">
+                <h5 class="pb-2">Contact Us</h5>
+                <div>
+                    <h6 class="text-uppercase">Address</h6>
+                    <p>1234 Main Strees, Pretoria, 0001</p>
+                </div>
+                <div>
+                    <h6 class="text-uppercase">Phone</h6>
+                    <p>0120345 6789</p>
+                </div>
+                <div>
+                    <h6 class="text-uppercase">Email</h6>
+                    <p>support@shop.com</p>
+                </div>
+            </div>
+            <div class="col-lg-2 col-md-6 col-sm-12 footer-one">
+                <h5 class="pb-2">Social Media</h5>
+                <div class="row socials">
+                    <a href="#"><i class="fab fa-instagram py-2"></i> Instagram</a>
+                    <a href="#"><i class="fab fa-facebook py-2"></i> Facebook</a>
+                    <a href="#"><i class="fab fa-twitter py-2"></i> Twitter</a>
+                    <a href="#"><i class="fab fa-tiktok py-2"></i> TikTok</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="copyright mt-5">
+            <div class="row container mx-auto">
+                <div class="col-lg-3 col-md-5 col-sm-12 mb-4">
+
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!--Footer end-->
     <script src="assets/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
