--- a/shop.html
+++ b/shop.html
@@ -45,14 +45,14 @@
 <section id="featured" class="my-5 py-5">
     <div class="container mt-5 py-5">
         <h3>
-            Featured Items
+            Products
         </h3>
         <hr>
         <p>
-            Check out our featured products
+            Check out our Catalogue
         </p>
     </div>
-    <div class="row mx-auto container-fluid">
+    <div class="row mx-auto container">
         <div class="product text-center col-lg-3 col-md-4 col-sm-12">
             <img src="assets/images/Lace-up-Sneakers-NAVY-505479330.jpg" class="img-fluid mb-3" alt="">
             <div class="star">
@@ -237,9 +237,20 @@
             <h4 class="p-price">R150</h4>
             <button class="buy-btn">Buy Now</button>
         </div>
+        <!--pagination-->
+        <nav aria-label="Page navigation example">
+            <ul class="pagination mt-5">
+                <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+                <li class="page-item"><a class="page-link" href="#">1</a></li>
+                <li class="page-item"><a class="page-link" href="#">2</a></li>
+                <li class="page-item"><a class="page-link" href="#">3</a></li>
+                <li class="page-item"><a class="page-link" href="#">Next</a></li>
+            </ul>
+        </nav>
     </div>
 </section>
 <!--Featured End-->
+
     
     <!--Footer start-->
     <footer class="mt-5 py-5">
