alighned single product images

--- a/shop.html
+++ b/shop.html
@@ -40,7 +40,7 @@
             </div>
         </div>
     </nav>
-    <!--Nav Start-->
+    <!--Nav End-->
 <!--Featured Sart-->
 <section id="featured" class="my-5 py-5">
     <div class="container mt-5 py-5">
