completed skeleton for single product page

--- a/single_product.html
+++ b/single_product.html
@@ -47,7 +47,7 @@
 </nav>
 <!--Nav End-->
 
-<section class="container single_product my-5 pt-5">
+<section class="container single-product my-5 pt-5">
     <div class="row mt-5">
         <div class="col-lg-5 col-md-6 col-sm-12">
             <img class="img-fluid w-100 pb-1" src="assets/images/Adventure-Outdoor-Sandals-BROWN-505479460-side.jpg" alt="">
@@ -67,9 +67,96 @@
             </div>
         </div>
 
+        <!--Product Details-->
+        <div class="col-lg-6 col-md-12 col-12">
+            <h6>Shoes</h6>
+            <h3>Footware</h3>
+            <h2>R500</h2>
+            <input type="number" value="1">
+            <button class="buy-btn">Add To Cart</button>
+            <h4 class="mt-5 mb-5">Product Details</h4>
+            <span>The details will be displayed here</span>
+        </div>
+
     </div>
 
 </section>
+
+<!--Related Products start-->
+<!--Featured Sart-->
+<section id="related-products" class="my-5 pb-5">
+    <div class="container text-center mt-5 py-5">
+        <h3>
+            Related Items
+        </h3>
+        <hr class="mx-auto">
+        
+    </div>
+    <div class="row mx-auto container-fluid">
+        <div class="product text-center col-lg-3 col-md-4 col-sm-12">
+            <img src="assets/images/Lace-up-Sneakers-NAVY-505479330.jpg" class="img-fluid mb-3" alt="">
+            <div class="star">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+            </div>
+            <h5 class="p-name">
+                Navy Sneakers
+            </h5>
+            <h4 class="p-price">R600</h4>
+            <button class="buy-btn">Buy Now</button>
+        </div>
+        <div class="product text-center col-lg-3 col-md-4 col-sm-12">
+            <img src="assets/images/Adventure-Outdoor-Sandals-BROWN-505479460-side.jpg" class="img-fluid mb-3" alt="">
+            <div class="star">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+            </div>
+            <h5 class="p-name">
+                Brown Sandals
+            </h5>
+            <h4 class="p-price">R400</h4>
+            <button class="buy-btn">Buy Now</button>
+        </div>
+        <div class="product text-center col-lg-3 col-md-4 col-sm-12">
+            <img src="assets/images/Australian-Cotton-Stripe-Pique-Polo-NAVY-505691304.jpg" class="img-fluid mb-3" alt="">
+            <div class="star">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+            </div>
+            <h5 class="p-name">
+                Polo Shirt
+            </h5>
+            <h4 class="p-price">R700</h4>
+            <button class="buy-btn">Buy Now</button>
+        </div>
+        <div class="product text-center col-lg-3 col-md-4 col-sm-12">
+            <img src="assets/images/StayNew-Slim-Fit-V-neck-Cotton-T-shirt-ICE-506080516-top.jpg" class="img-fluid mb-3" alt="">
+            <div class="star">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+            </div>
+            <h5 class="p-name">
+                V-Neck T-Shirt
+            </h5>
+            <h4 class="p-price">R150</h4>
+            <button class="buy-btn">Buy Now</button>
+        </div>
+    </div>
+</section>
+<!--Featured End-->
+<!--Related Products end-->
 
 <!--Footer start-->
 <footer class="mt-5 py-5">
