write function to swap product images when clicked

--- a/single_product.html
+++ b/single_product.html
@@ -50,19 +50,19 @@
 <section class="container single-product my-5 pt-5">
     <div class="row mt-5">
         <div class="col-lg-5 col-md-6 col-sm-12">
-            <img class="img-fluid w-100 pb-1" src="assets/images/Adventure-Outdoor-Sandals-BROWN-505479460-side.jpg" alt="">
+            <img id="mainImg" class="img-fluid w-100 pb-1" src="assets/images/Adventure-Outdoor-Sandals-BROWN-505479460-side.jpg" alt="">
             <div class="small-img-group">
                 <div class="small-img-col">
-                    <img src="assets/images/Adventure-Outdoor-Sandals-BROWN-505479460-styled.jpg" width="100%" class="small-img" alt="">
+                    <img src="assets/images/Comfort-Derby-Shoes-BLACK-506058246.jpg" width="100%" class="small-img" alt="">
                 </div>
                 <div class="small-img-col">
-                    <img src="assets/images/Adventure-Outdoor-Sandals-BROWN-505479460-styled.jpg" width="100%" class="small-img" alt="">
+                    <img src="assets/images/Adventure-Outdoor-Sandals-BROWN-505479460.jpg" width="100%" class="small-img" alt="">
                 </div>
                 <div class="small-img-col">
-                    <img src="assets/images/Adventure-Outdoor-Sandals-BROWN-505479460-styled.jpg" width="100%" class="small-img" alt="">
+                    <img src="assets/images/Badge-Logo-Baseball-Cap-GREY-506064268-angle.jpg" width="100%" class="small-img" alt="">
                 </div>
                 <div class="small-img-col">
-                    <img src="assets/images/Adventure-Outdoor-Sandals-BROWN-505479460-styled.jpg" width="100%" class="small-img" alt="">
+                    <img src="assets/images/Badge-Logo-Baseball-Cap-GREY-506064268.jpg" width="100%" class="small-img" alt="">
                 </div>
             </div>
         </div>
@@ -213,6 +213,10 @@
     </div>
 </footer>
 <!--Footer end-->
+
 <script src="assets/js/bootstrap.bundle.min.js"></script>
+<script src="assets/js/scripts.js">
+ 
+</script>
 </body>
 </html>
