--- a/shop.html
+++ b/shop.html
@@ -114,7 +114,7 @@
             <button class="buy-btn">Buy Now</button>
         </div>
     </div>
-    <div class="row mx-auto container-fluid">
+    <div class="row mx-auto container">
         <div onclick="window.location.href='single_product.html'" class="product text-center col-lg-3 col-md-4 col-sm-12">
             <img src="assets/images/Lace-up-Sneakers-NAVY-505479330.jpg" class="img-fluid mb-3" alt="">
             <div class="star">
@@ -176,7 +176,7 @@
             <button class="buy-btn">Buy Now</button>
         </div>
     </div>
-    <div class="row mx-auto container-fluid">
+    <div class="row mx-auto container">
         <div onclick="window.location.href='single_product.html'" class="product text-center col-lg-3 col-md-4 col-sm-12">
             <img src="assets/images/Lace-up-Sneakers-NAVY-505479330.jpg" class="img-fluid mb-3" alt="">
             <div class="star">
