completed checkout page skeleton

--- a/register.html
+++ b/register.html
@@ -82,7 +82,7 @@
             </form>
         </div>
     </section>
-    <!--Login End-->
+    <!--Registration End-->
 
 
         <!--Footer start-->
