order placed and waiting for payment

--- a/account.html
+++ b/account.html
@@ -35,7 +35,7 @@
                         <a href="contact.html" class="nav-link">Conctact Us</a>
                     </li>
                     <li class="nav-item">
-                        <a href="cart.html"><i class="fas fa-shopping-cart"></i></a>
+                        <a href="cart.php"><i class="fas fa-shopping-cart"></i></a>
                         <a href="account.html"><i class="fas fa-user"></i></a>
                     </li>
                     <li class="nav-item">
