--- a/shop.html
+++ b/shop.html
@@ -18,7 +18,7 @@
             <div class="collapse navbar-collapse nav-buttons nowrap" id="navbarMain">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a href="index.html" class="nav-link">Home</a>
+                        <a href="index.php" class="nav-link">Home</a>
                     </li>
                     <li class="nav-item">
                         <a href="shop.html" class="nav-link">Shop</a>
@@ -27,11 +27,11 @@
                         <a href="#" class="nav-link">Blog</a>
                     </li>
                     <li class="nav-item">
-                        <a href="contact.html" class="nav-link">Conctact Us</a>
+                        <a href="contact.php" class="nav-link">Conctact Us</a>
                     </li>
                     <li class="nav-item">
-                        <a href="cart.html"><i class="fas fa-shopping-cart"></i></a>
-                        <a href="account.html"><i class="fas fa-user"></i></a>
+                        <a href="cart.php"><i class="fas fa-shopping-cart"></i></a>
+                        <a href="account.php"><i class="fas fa-user"></i></a>
                     </li>
                     <li class="nav-item">
                         
