--- a/shop.html
+++ b/shop.html
@@ -41,8 +41,62 @@
         </div>
     </nav>
     <!--Nav End-->
+
+    
+    <div class="row">
+
+    <!--Search side bar start-->
+    <section id="search" class="my-5 py-5 ms-2 col-lg-2 col-md-2 col-sm-12">
+        <div class="container mt-5 py-5">
+            <h3>Filter</h3>
+            <hr>
+        </div>
+
+        <form action="">
+            <div class="row mx-auto container">
+                <div class="col-lg-12 col-md-12 col-sm-12">
+                    <p>Category</p>
+                    <div class="form-check">
+                        <input type="radio" class="form-check-input" name="category" id="category_one">
+                        <label for="flexRadioDefault1" class="form-check-label">Footwaer</label>
+
+                    </div>
+                    <div class="form-check">
+                        <input type="radio" class="form-check-input" name="category" id="category_one">
+                        <label for="flexRadioDefault1" class="form-check-label">Shirts & Pants</label>
+
+                    </div>
+                    <div class="form-check">
+                        <input type="radio" class="form-check-input" name="category" id="category_one">
+                        <label for="flexRadioDefault1" class="form-check-label">Accessories</label>
+
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="row mx-auto conatainer mt-5">
+                <div class="col=lg-12 col-md-12 col-sm-12">
+                    <p>Price</p>
+                    <input id="customRange2" type="range" class="form-range w-100" min="1" max="1000">
+
+                    <div class="w-100">
+                        <span style="float: left;">1</span>
+                        <span style="float: right;">1000</span>
+                    </div>
+                </div>
+            </div>
+
+            <div>
+                <input type="submit" name="search" value="Search" class="btn btn-primary">
+            </div>
+        </form>
+
+    </section>
+
+    <!--Search side bar end-->
 <!--Featured Sart-->
-<section id="featured" class="my-5 py-5">
+<section id="featured" class="my-5 py-5 col-lg-9 col-md-9 col-sm-12">
     <div class="container mt-5 py-5">
         <h3>
             Products
@@ -236,6 +290,7 @@
             </h5>
             <h4 class="p-price">R150</h4>
             <button class="buy-btn">Buy Now</button>
+        </div>
         </div>
         <!--pagination-->
         <nav aria-label="Page navigation example">
